--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
             <div id="mainPage" class="container text-center " >
                         <h1 class="fs-1  typed-text "></h1>
-                        <p class="fs-1 mb-5 text-center">وايت مياه تحليه لتعبئة الخزانات علوي وأرضي بالرياض وايت صغير 6 طن فقط</p>
+                        <p class="fs-1 mb-5 text-center">وايت مياه تحليه لتعبئة الخزانات علوي وأرضي بالرياض وايت 6 طن </p>
                         <a class="num-container" style="border: none; background-color: white; padding: 5px 20px; color: green;" href="tel:
                         0551224246">
                           <i class="fas fa-phone-alt mr-2"></i>
